# ai-customer-support

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  .gitignore  pyproject.toml  requirements.txt  test_api.py
backend/app/: __init__.py  agent.py  config.py  database.py  dependencies.py  main.py
backend/app/models/: database.py  schemas.py
backend/app/routers/: admin.py  chat.py  history.py
backend/app/services/: __init__.py  chat_log.py  data_loader.py  embedding.py  vector_store.py
backend/app/tools/: __init__.py  customer_service.py
backend/bitext_cn/: account.json  all_categories.json  contact.json  delivery.json  feedback.json  invoice.json  order.json  payment.json  refund.json  shipping.json  subscription.json
backend/chroma_db/7b82e046-674e-497a-850d-342f60c41471/: index_metadata.pickle
backend/scripts/: import_data.py
backend/tests/: conftest.py  test_agent.py  test_api.py  test_chat_log.py  test_chat_persistence.py  test_checkpoint.py  test_config.py  test_data_loader.py  test_database.py  test_embedding.py  test_history_api.py  test_vector_store.py
frontend/: .env.development  .env.production  .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/src/: App.tsx
frontend/src/components/: ChatWindow.tsx  Header.tsx  InputBox.tsx  MessageList.tsx  QuickQuestions.test.tsx  QuickQuestions.tsx  References.test.tsx  References.tsx  SessionList.test.tsx  SessionList.tsx
frontend/src/hooks/: useSessions.ts
frontend/src/lib/: utils.ts
frontend/src/services/: api.ts
(+1 files in other folders)
