[project]
name = "ai-customer-support-backend"
version = "0.1.0"
description = "AI 客服系统后端 — FastAPI + LangGraph + Chroma"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "langchain>=1.0.0",
    "langchain-openai>=0.3.0",
    "langchain-community>=0.4.2",
    "langgraph>=0.4.0",
    "chromadb>=1.5.9",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.10.0",
    "python-dotenv>=1.2.2",
    "optimum[onnxruntime]>=1.24.0",
    "transformers>=4.48.0",
    "datasets>=4.8.0",
    "tiktoken>=0.8.0",
    "langchain-chroma>=1.1.0",
    "sqlalchemy>=2.0.50",
    "alembic>=1.18.4",
]

[project.optional-dependencies]
dev = ["ruff>=0.9.0", "pytest>=8.3.0"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
